--- a/SalesWebMVC/Views/Sellers/Create.cshtml
+++ b/SalesWebMVC/Views/Sellers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SalesWebMVC.Models.Seller
+﻿@model SalesWebMVC.Models.ViewModels.SelerFormViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -11,24 +11,29 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div class="form-group">
-                <label asp-for="Nome"       class="control-label">
+                <label asp-for="Seller.Nome" class="control-label">
                 </label>
-                <input asp-for="Nome"       class="form-control" />
+                <input asp-for="Seller.Nome" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Email"      class="control-label">
+                <label asp-for="Seller.Email" class="control-label">
                 </label>
-                <input asp-for="Email"      class="form-control" />
+                <input asp-for="Seller.Email" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="BirthDate"  class="control-label">
+                <label asp-for="Seller.BirthDate" class="control-label">
                 </label>
-                <input asp-for="BirthDate"  class="form-control" />
+                <input asp-for="Seller.BirthDate" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="BaseSalary" class="control-label">
+                <label asp-for="Seller.BaseSalary" class="control-label">
                 </label>
-                <input asp-for="BaseSalary" class="form-control" />
+                <input asp-for="Seller.BaseSalary" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Seller.DepartmentsId" class="control-label"></label>
+                <select asp-for="Seller.DepartmentsId" asp-items="@(new SelectList(Model.Departments,"Id",
+                    "Nome"))" class="form-control"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-dark" />
